Yellow's Favorite Recipe

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,57 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Description here" />
-	<title></title>
+	<title>The Easiest Egg Fried Rice</title>
 </head>
 <body>
+	<img src="images/LogoWhite.jpg" 
+	alt="Logo"
+	width="200"
+	height="50"/>
+	<img src="images/Egg-Fried-Rice-1.jpg"
+	alt="Tasty Egg Fried Rice"
+	width="200"
+	height="300"/>
+	<h1> The Easiest Egg Fried Rice </h1>
+	<h4> Prep Cook Total </h4>
+	<h4> 10 mins 10 mins 20 mins </h4>
+	<h3> Ingredients Instructions </h3>
+	<p> 
+		This easy egg fried rice is something that I cook every other week. It's a no-fuss meal, that you can easily modify with whatever vegetables you have on hand. The fried rice is great with my <a href="https://healthynibblesandbits.com/chinese-garlic-green-beans/">Chinese Green Beans</a>, <a href="https://healthynibblesandbits.com/chinese-garlic-cucumber-salad/">Chinese Garlic Cucumber Salad</a>, or <a href="https://healthynibblesandbits.com/honey-chili-garlic-shrimp/">Honey Chili Garlic Shrimp</a>.
+	</p>
+	<h2> INGREDIENTS </h2>
+	<ul>
+		<li>4 large eggs</li>
+		<li>3 tablespoons peanut, vegetables, or olive oil (see note 1)</li>
+		<li>1 cup diced onion, about 1 small onion (see note 2)</li>
+		<li>1 1/2 to 2 cups diced mixed vegetables, such as bell pepper, carrots, zucchini, etc. (see note 3)</li>
+		<li>1/2 cup sliced scallions, white and green parts divided (see note 4)</li>
+		<li>pinch of salt</li>
+		<li>4 cups cooked overnight jasmine rice (see note 5)</li>
+		<li>2 1/2 tablespoons soy sauce, use tamari if gluten free</li>
+		<li>1/2 teaspoon five-spice powder</li>
+		<li>dash of ground white pepper, optional</li>
+		<li>1 to 2 teaspoons toasted sesame oil</li>
+	</ul>
+	<h2> INSTRUCTIONS </h2>
+	<ol>
+		<li>Crack the eggs into a small bowl and beat them together.</li>
+		<li>Heat a skillet with 1 tablespoon of the oil over medium-high heat. Once the pan is hot, add the beaten eggs and scramble them for about a minute. Transfer the eggs to a dish and turn off the heat.</li>
+		<li>Drizzle the remaining 2 tablespoons of oil into a wok over high heat. Add the onions and cook them for about 1 to 2 minutes, stirring constantly. Add the mixed vegetables and white parts of the scallions and cook for 2 minutes. Season the vegetables with a pinch of salt.</li>
+		<li>Add the cooked rice into the pan or wok and cook for several minutes, until the rice is heated through. If there are large clumps of rice, break them apart with the back of your spatula.</li>
+		<li>Add the soy sauce, five-spice powder, dash of white pepper (if using) and sesame oil and stir to distribute the seasonings. (See note 6) Add the scrambled eggs and stir to mix again. Garnish with remaining sliced scallions. Serve immediately.</li>
+	</ol>
+	<h2> NOTES </h2>
+	<ol>
+		<li>Peanut oil will give the fried rice a nice light fragrance. I know that olive oil is not traditionally used in Chinese cooking, but you can't really detect the flavor of the olive oil in this recipe.</li>
+		<li>It doesn't matter what color onion you use. White, yellow, sweet, or red onions work. If you don't have onions, you can use shallots.</li>
+		<li>You can use whatever vegetables you want for this recipe. Corn, bell peppers, carrots, green beans, zucchini, and peas are all great options for this fried rice. The exact amount of vegetables you use is up to you. Keep in mind that the more vegetables you use, the more moisture you'll likely introduce to the wok as you cook the fried rice. This can lead to soggy fried rice, especially if there is a lot of crowding in the wok (or sauté pan). I have found 2 cups of diced vegetables to be sufficient.</li>
+		<li>I like to reserve some of the dark green parts of the scallions for garnish.</li>
+		<li>If you are looking for a basic recipe for cooking jasmine rice, refer to my guide on <a href="https://healthynibblesandbits.com/how-to-cook-jasmine-rice/">how to cook jasmine rice</a>. You can also use a fork to loosen the rice before you add it to the wok. This will make it easier for you to break apart any large clumps of rice.</li>
+		<li>If you want to add more flavor to the fried rice, mix it 1 tablespoon of my <a href="https://healthynibblesandbits.com/teriyaki-sauce/">teriyaki sauce</a> or store-bought hoisin sauce.</li>
+		<li>I have updated this recipe as of August 17, 2020 to add more vegetables and slightly more seasoning to the fried rice.</li>
+	</ol>
+	<h2> NUTRITION </h2>
+<p>Serving: 1serving | Calories: 425kcal | Carbohydrates: 55.6g | Protein: 13.4g | Fat: 16.7g | Saturated Fat: 3.2g | Cholesterol: 186mg | Sodium: 423mg | Fiber: 4g | Sugar: 1.7g</p>
 </body>
 </html>
