--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,23 @@
 	<p> 
 		This easy egg fried rice is something that I cook every other week. It's a no-fuss meal, that you can easily modify with whatever vegetables you have on hand. The fried rice is great with my <a href="https://healthynibblesandbits.com/chinese-garlic-green-beans/">Chinese Green Beans</a>, <a href="https://healthynibblesandbits.com/chinese-garlic-cucumber-salad/">Chinese Garlic Cucumber Salad</a>, or <a href="https://healthynibblesandbits.com/honey-chili-garlic-shrimp/">Honey Chili Garlic Shrimp</a>.
 	</p>
-	<h2> INGREDIENTS </h2>
+	<p>
+		You would be hard-pressed to find a Chinese household that doesn't enjoy a good bowl of fried rice. Growing up, whenever I saw a large bowl of cooked rice in the kitchen, I would cross my fingers and wait with eager anticipation to see if it was fried rice night. The flavor of rice mixed with eggs, vegetables, and a thin layer of soy sauce was something that brought comfort to my belly.
+	</p>
+	<p>It probably comes as no surprise that I cook fried rice very frequently. Not only do I find this dish comforting, but it is also darn easy to make. All you really need is rice, eggs, vegetables, and soy sauce. Once you get into the rhythm of this basic egg fried rice recipe, play around with it! Substitute rice for <a href="https://www.bobsredmill.com/organic-quinoa-grain.html">quinoa</a>, add other vegetables or protein—do whatever suits your taste.
+	</p>
+	<h2> COOKING NOTES FOR EGG FRIED RICE
+		</h2>
+	<h3> USING DAY-OLD RICE </h3>
+	<p> 
+		Fried rice is usually a dish that you make to repurpose the leftover cooked rice from the day before. You want to avoid freshly cooked rice because it is still moist and steamy, which may yield fried rice with a mushy texture. (Notice in the photo below how you can see the individual grains of rice instead of a mushy mass of rice.) However, if you forget about cooking rice the day before, here is a little trick that I use. Spread a layer of freshly cooked rice onto large baking sheets and let the rice air out for 1 to 2 hours—the longer the better. The grains of rice will dry out during this process.
+		</p>
+	<h3> USING PACKAGED RICE </h3>
+	<p>
+		For this recipe, I experimented with using packaged pre-cooked rice, which is what you see in the photos. These packages usually contain 2 cups of cooked rice, so you'll need 2 packages for the recipe. The packaged rice is fine, especially if you are too busy during the week to cook rice. However, it is definitely more expensive than buying rice and cooking it yourself (I sound like a mother here). I also found a slight smell when I opened the packages (probably from whatever preservatives the manufacturer used), though not enough to make me throw the rice straight to the trash. Ultimately, I recommend cooking the rice yourself, but hey, I understand if you don't have time for that.
+		</p>
+	<h2> INGREDIENTS
+		</h2>
 	<ul>
 		<li>4 large eggs</li>
 		<li>3 tablespoons peanut, vegetables, or olive oil (see note 1)</li>
