--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Description here" />
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>The Easiest Egg Fried Rice</title>
 </head>
 <body>
@@ -17,9 +18,21 @@
 	width="200"
 	height="300"/>
 	<h1> The Easiest Egg Fried Rice </h1>
-	<h4> Prep Cook Total </h4>
-	<h4> 10 mins 10 mins 20 mins </h4>
-	<h3> Ingredients Instructions </h3>
+	<section>
+		<div>
+		   <h2>Prep</h2>
+		   <p>10 mins</p>
+		</div>
+		<div>
+		   <h2>Cook</h2>
+		   <p>10 mins</p>
+		</div>
+		<div>
+		   <h2>Total</h2>
+		   <p>20 mins</p>
+		</div>
+	 </section>
+	<h2> Ingredients Instructions </h2>
 	<p> 
 		This easy egg fried rice is something that I cook every other week. It's a no-fuss meal, that you can easily modify with whatever vegetables you have on hand. The fried rice is great with my <a href="https://healthynibblesandbits.com/chinese-garlic-green-beans/">Chinese Green Beans</a>, <a href="https://healthynibblesandbits.com/chinese-garlic-cucumber-salad/">Chinese Garlic Cucumber Salad</a>, or <a href="https://healthynibblesandbits.com/honey-chili-garlic-shrimp/">Honey Chili Garlic Shrimp</a>.
 	</p>
@@ -28,18 +41,18 @@
 	</p>
 	<p>It probably comes as no surprise that I cook fried rice very frequently. Not only do I find this dish comforting, but it is also darn easy to make. All you really need is rice, eggs, vegetables, and soy sauce. Once you get into the rhythm of this basic egg fried rice recipe, play around with it! Substitute rice for <a href="https://www.bobsredmill.com/organic-quinoa-grain.html">quinoa</a>, add other vegetables or protein—do whatever suits your taste.
 	</p>
-	<h2> COOKING NOTES FOR EGG FRIED RICE
-		</h2>
-	<h3> USING DAY-OLD RICE </h3>
+	<h3> Cooking Notes for Egg Fried Rice
+		</h3>
+	<h4> Using Day-Old Rice </h4>
 	<p> 
 		Fried rice is usually a dish that you make to repurpose the leftover cooked rice from the day before. You want to avoid freshly cooked rice because it is still moist and steamy, which may yield fried rice with a mushy texture. (Notice in the photo below how you can see the individual grains of rice instead of a mushy mass of rice.) However, if you forget about cooking rice the day before, here is a little trick that I use. Spread a layer of freshly cooked rice onto large baking sheets and let the rice air out for 1 to 2 hours—the longer the better. The grains of rice will dry out during this process.
 		</p>
-	<h3> USING PACKAGED RICE </h3>
+	<h4> Using Packaged Rice </h4>
 	<p>
 		For this recipe, I experimented with using packaged pre-cooked rice, which is what you see in the photos. These packages usually contain 2 cups of cooked rice, so you'll need 2 packages for the recipe. The packaged rice is fine, especially if you are too busy during the week to cook rice. However, it is definitely more expensive than buying rice and cooking it yourself (I sound like a mother here). I also found a slight smell when I opened the packages (probably from whatever preservatives the manufacturer used), though not enough to make me throw the rice straight to the trash. Ultimately, I recommend cooking the rice yourself, but hey, I understand if you don't have time for that.
 		</p>
-	<h2> INGREDIENTS
-		</h2>
+	<h3> Ingredients
+		</h3>
 	<ul>
 		<li>4 large eggs</li>
 		<li>3 tablespoons peanut, vegetables, or olive oil (see note 1)</li>
@@ -53,7 +66,7 @@
 		<li>dash of ground white pepper, optional</li>
 		<li>1 to 2 teaspoons toasted sesame oil</li>
 	</ul>
-	<h2> INSTRUCTIONS </h2>
+	<h3> Instructions </h3>
 	<ol>
 		<li>Crack the eggs into a small bowl and beat them together.</li>
 		<li>Heat a skillet with 1 tablespoon of the oil over medium-high heat. Once the pan is hot, add the beaten eggs and scramble them for about a minute. Transfer the eggs to a dish and turn off the heat.</li>
@@ -61,7 +74,7 @@
 		<li>Add the cooked rice into the pan or wok and cook for several minutes, until the rice is heated through. If there are large clumps of rice, break them apart with the back of your spatula.</li>
 		<li>Add the soy sauce, five-spice powder, dash of white pepper (if using) and sesame oil and stir to distribute the seasonings. (See note 6) Add the scrambled eggs and stir to mix again. Garnish with remaining sliced scallions. Serve immediately.</li>
 	</ol>
-	<h2> NOTES </h2>
+	<h3> Notes(ordered as reference to ingredients) </h3>
 	<ol>
 		<li>Peanut oil will give the fried rice a nice light fragrance. I know that olive oil is not traditionally used in Chinese cooking, but you can't really detect the flavor of the olive oil in this recipe.</li>
 		<li>It doesn't matter what color onion you use. White, yellow, sweet, or red onions work. If you don't have onions, you can use shallots.</li>
@@ -71,7 +84,18 @@
 		<li>If you want to add more flavor to the fried rice, mix it 1 tablespoon of my <a href="https://healthynibblesandbits.com/teriyaki-sauce/">teriyaki sauce</a> or store-bought hoisin sauce.</li>
 		<li>I have updated this recipe as of August 17, 2020 to add more vegetables and slightly more seasoning to the fried rice.</li>
 	</ol>
-	<h2> NUTRITION </h2>
-<p>Serving: 1serving | Calories: 425kcal | Carbohydrates: 55.6g | Protein: 13.4g | Fat: 16.7g | Saturated Fat: 3.2g | Cholesterol: 186mg | Sodium: 423mg | Fiber: 4g | Sugar: 1.7g</p>
+	<h3> Nutrition </h3>
+<ul>
+	<li>Serving: 1serving</li>
+	<li>Calories: 425kcal</li>
+	<li>Carbohydrates: 55.6g</li>
+	<li>Protein: 13.4g</li>
+	<li>Fat: 16.7g</li>
+	<li>Saturated Fat: 3.2g</li>
+	<li>Cholesterol: 186mg</li>
+	<li>Sodium: 423mg</li>
+	<li>Fiber: 4g</li>
+	<li>Sugar: 1.7g</li>
+</ul>
 </body>
 </html>
