--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,15 @@
 			height="40"/>
 		</a>
 	</nav>
+	<article>
 	<div class="title">
+		<img class="title-picture" src="images/Egg-Fried-Rice-1.jpg"
+		alt="Tasty Egg Fried Rice"
+		width="250"
+		height="250"/>
+		<sec class="gradient"> </sec> 
 		<h1 class="title-child"> The Easiest Egg Fried Rice 
 		</h1>
-		<img class="picture" src="images/Egg-Fried-Rice-1.jpg"
-		alt="Tasty Egg Fried Rice"
-		width="180"
-		height="280"/>
 	</div>
 	<section class="time-container">
 		<div class="time-child">
@@ -54,8 +56,8 @@
 		</div>
 	 </section>
 	<section class="butt">
-		<a href="#" class="frame 1"> Ingredients </a> </h2> 
-		<a href="#" class="frame 2"> Instructions </a> </h2> 
+		<a href="#" class="frame 1"> Ingredients </a> 
+		<a href="#" class="frame 2"> Instructions </a>
 	</section>
 	<p class="intro"> 
 		This easy egg fried rice is something that I cook every other week. It's a no-fuss meal, that you can easily modify with whatever vegetables you have on hand. The fried rice is great with my <a href="https://healthynibblesandbits.com/chinese-garlic-green-beans/">Chinese Green Beans</a>, <a href="https://healthynibblesandbits.com/chinese-garlic-cucumber-salad/">Chinese Garlic Cucumber Salad</a>, or <a href="https://healthynibblesandbits.com/honey-chili-garlic-shrimp/">Honey Chili Garlic Shrimp</a>.
@@ -79,8 +81,8 @@
 	</p>
 	<img class="picture" src="images/PlainRice.jpg"
 	alt="Plain Rice"
-	height="280"
-	width="390"/>
+	height="180"
+	width="270"/>
 	<h3> 
 		Ingredients
 	</h3>
@@ -119,8 +121,8 @@
 	<div class="morphism">
 		<img class="picture" src="images/Egg-Fried-Rice-2.jpg"
 			alt="Beautiful Egg Fried Rice"
-			width="380"
-			height="550"/>
+			width="270"
+			height="350"/>
 			<ul class="band">
 				<li class="nut">Serving: 1serving</li>
 				<li class="nut">Calories: 425kcal</li>
@@ -134,5 +136,6 @@
 				<li class="nut">Sugar: 1.7g</li>
 			</ul>
 	</div>
+</article>
 </body>
 </html>
