--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
 	<meta name="description" content="Description here" />
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Julius+Sans+One&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Julius+Sans+One&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>The Easiest Egg Fried Rice</title>
@@ -35,8 +35,7 @@
 	<div class="title">
 		<img class="title-picture" src="images/Egg-Fried-Rice-1.jpg"
 		alt="Tasty Egg Fried Rice"
-		width="250"
-		height="250"/>
+		/>
 		<sec class="gradient"> </sec> 
 		<h1 class="title-child"> The Easiest Egg Fried Rice 
 		</h1>
@@ -71,42 +70,53 @@
 	<h3> 
 		Cooking Notes for Egg Fried Rice
 	</h3>
-	<h4> Using Day-Old Rice </h4>
-	<p> 
-		Fried rice is usually a dish that you make to repurpose the leftover cooked rice from the day before. You want to avoid freshly cooked rice because it is still moist and steamy, which may yield fried rice with a mushy texture. (Notice in the photo below how you can see the individual grains of rice instead of a mushy mass of rice.) However, if you forget about cooking rice the day before, here is a little trick that I use. Spread a layer of freshly cooked rice onto large baking sheets and let the rice air out for 1 to 2 hours—the longer the better. The grains of rice will dry out during this process.
-	</p>
-	<h4> Using Packaged Rice </h4>
-	<p>
-		For this recipe, I experimented with using packaged pre-cooked rice, which is what you see in the photos. These packages usually contain 2 cups of cooked rice, so you'll need 2 packages for the recipe. The packaged rice is fine, especially if you are too busy during the week to cook rice. However, it is definitely more expensive than buying rice and cooking it yourself (I sound like a mother here). I also found a slight smell when I opened the packages (probably from whatever preservatives the manufacturer used), though not enough to make me throw the rice straight to the trash. Ultimately, I recommend cooking the rice yourself, but hey, I understand if you don't have time for that.
-	</p>
-	<img class="picture" src="images/PlainRice.jpg"
+	<section class="jux">
+		<div class="jux-child">
+			<h4> Using Day-Old Rice </h4>
+			<p> 
+				Fried rice is usually a dish that you make to repurpose the leftover cooked rice from the day before. You want to avoid freshly cooked rice because it is still moist and steamy, which may yield fried rice with a mushy texture. (Notice in the photo below how you can see the individual grains of rice instead of a mushy mass of rice.) However, if you forget about cooking rice the day before, here is a little trick that I use. Spread a layer of freshly cooked rice onto large baking sheets and let the rice air out for 1 to 2 hours—the longer the better. The grains of rice will dry out during this process.
+			</p>
+		</div>
+		<div class="jux-child">
+			<h4> Using Packaged Rice </h4>
+			<p>
+				For this recipe, I experimented with using packaged pre-cooked rice, which is what you see in the photos. These packages usually contain 2 cups of cooked rice, so you'll need 2 packages for the recipe. The packaged rice is fine, especially if you are too busy during the week to cook rice. However, it is definitely more expensive than buying rice and cooking it yourself (I sound like a mother here). I also found a slight smell when I opened the packages (probably from whatever preservatives the manufacturer used), though not enough to make me throw the rice straight to the trash. Ultimately, I recommend cooking the rice yourself, but hey, I understand if you don't have time for that.
+			</p>
+		</div>
+	</section>
+	<img class="middlepicture" src="images/PlainRice.jpg"
 	alt="Plain Rice"
-	height="180"
-	width="270"/>
-	<h3> 
-		Ingredients
-	</h3>
-	<ul>
-		<li>4 large eggs</li>
-		<li>3 tablespoons peanut, vegetables, or olive oil (see note 1)</li>
-		<li>1 cup diced onion, about 1 small onion (see note 2)</li>
-		<li>1 1/2 to 2 cups diced mixed vegetables, such as bell pepper, carrots, zucchini, etc. (see note 3)</li>
-		<li>1/2 cup sliced scallions, white and green parts divided (see note 4)</li>
-		<li>pinch of salt</li>
-		<li>4 cups cooked overnight jasmine rice (see note 5)</li>
-		<li>2 1/2 tablespoons soy sauce, use tamari if gluten free</li>
-		<li>1/2 teaspoon five-spice powder</li>
-		<li>dash of ground white pepper, optional</li>
-		<li>1 to 2 teaspoons toasted sesame oil</li>
-	</ul>
-	<h3> Instructions </h3>
-	<ol>
-		<li>Crack the eggs into a small bowl and beat them together.</li>
-		<li>Heat a skillet with 1 tablespoon of the oil over medium-high heat. Once the pan is hot, add the beaten eggs and scramble them for about a minute. Transfer the eggs to a dish and turn off the heat.</li>
-		<li>Drizzle the remaining 2 tablespoons of oil into a wok over high heat. Add the onions and cook them for about 1 to 2 minutes, stirring constantly. Add the mixed vegetables and white parts of the scallions and cook for 2 minutes. Season the vegetables with a pinch of salt.</li>
-		<li>Add the cooked rice into the pan or wok and cook for several minutes, until the rice is heated through. If there are large clumps of rice, break them apart with the back of your spatula.</li>
-		<li>Add the soy sauce, five-spice powder, dash of white pepper (if using) and sesame oil and stir to distribute the seasonings. (See note 6) Add the scrambled eggs and stir to mix again. Garnish with remaining sliced scallions. Serve immediately.</li>
-	</ol>
+	/>
+	<section class="jux">
+		<div class="jux-child1">
+			<h3> 
+				Ingredients
+			</h3>
+			<ul>
+				<li>4 large eggs</li>
+				<li>3 tablespoons peanut, vegetables, or olive oil (see note 1)</li>
+				<li>1 cup diced onion, about 1 small onion (see note 2)</li>
+				<li>1 1/2 to 2 cups diced mixed vegetables, such as bell pepper, carrots, zucchini, etc. (see note 3)</li>
+				<li>1/2 cup sliced scallions, white and green parts divided (see note 4)</li>
+				<li>pinch of salt</li>
+				<li>4 cups cooked overnight jasmine rice (see note 5)</li>
+				<li>2 1/2 tablespoons soy sauce, use tamari if gluten free</li>
+				<li>1/2 teaspoon five-spice powder</li>
+				<li>dash of ground white pepper, optional</li>
+				<li>1 to 2 teaspoons toasted sesame oil</li>
+			</ul>
+		</div>
+		<div class="jux-child1">
+			<h3> Instructions </h3>
+			<ol>
+				<li>Crack the eggs into a small bowl and beat them together.</li>
+				<li>Heat a skillet with 1 tablespoon of the oil over medium-high heat. Once the pan is hot, add the beaten eggs and scramble them for about a minute. Transfer the eggs to a dish and turn off the heat.</li>
+				<li>Drizzle the remaining 2 tablespoons of oil into a wok over high heat. Add the onions and cook them for about 1 to 2 minutes, stirring constantly. Add the mixed vegetables and white parts of the scallions and cook for 2 minutes. Season the vegetables with a pinch of salt.</li>
+				<li>Add the cooked rice into the pan or wok and cook for several minutes, until the rice is heated through. If there are large clumps of rice, break them apart with the back of your spatula.</li>
+				<li>Add the soy sauce, five-spice powder, dash of white pepper (if using) and sesame oil and stir to distribute the seasonings. (See note 6) Add the scrambled eggs and stir to mix again. Garnish with remaining sliced scallions. Serve immediately.</li>
+			</ol>
+		</div>
+	</section>
 	<h3> Notes </h3> 
 	<ol>
 		<li>Peanut oil will give the fried rice a nice light fragrance. I know that olive oil is not traditionally used in Chinese cooking, but you can't really detect the flavor of the olive oil in this recipe.</li>
@@ -119,10 +129,9 @@
 	</ol>
 	<h3> Nutrition </h3>
 	<div class="morphism">
-		<img class="picture" src="images/Egg-Fried-Rice-2.jpg"
+		<img class="lastpicture" src="images/Egg-Fried-Rice-2.jpg"
 			alt="Beautiful Egg Fried Rice"
-			width="270"
-			height="350"/>
+			/>
 			<ul class="band">
 				<li class="nut">Serving: 1serving</li>
 				<li class="nut">Calories: 425kcal</li>
