--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 		<img class="title-picture" src="images/Egg-Fried-Rice-1.jpg"
 		alt="Tasty Egg Fried Rice"
 		/>
-		<sec class="gradient"> </sec> 
+		<section class="gradient"> </section> 
 		<h1 class="title-child"> The Easiest Egg Fried Rice 
 		</h1>
 	</div>
